--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "csv": "^0.4.1",
     "mime": "^1.2.11",
     "mysql": "^2.5.3",
+    "shell-escape": "^0.1.0",
     "text-miner": "^0.1.4",
     "underscore": "^1.7.0",
-    "winston": "^0.8.3"
+    "winston": "^0.8.3",
+    "xml2js": "^0.4.4"
   }
 }
